# sysintercept

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  README.rst  dev_interface.xml
.externalToolBuilders/: Make.launch
SyscallInterceptor/: .cproject  .project  interceptconfigshare.cpp  interceptconfigshare.h  notes  stdafx.cpp  sysintercept.cpp
SyscallInterceptor/other/: sysintercept_config.xsd
SyscallInterceptor/src/: interceptconfigshare.cpp  interceptconfigshare.h  sysintercept.cpp
SyscallInterceptor/src/xml/: sysintercept_config.xsd
SyscallInterceptorCommon/: .cproject  .gitignore  .project  charset.cpp  charset.h  common.h  ipc.h  logging.cpp  logging.h  stdafx.h
SyscallInterceptorCommon/headers/: common.h  stdafx.h
SyscallInterceptorCommon/src/: common.h  logging.cpp  stdafx.h
SyscallInterceptorDll/: .cproject  .project  config.cpp  config.h  dllmain.cpp  interceptconfig.h  parse.cpp  parse.h  replacement.cpp  replacement.h
SyscallInterceptorDll/src/: dllmain.cpp  exports.def  interceptconfig.cpp  ipc.cpp  ipc.h  substitution.cpp  substitution.h
SyscallInterceptorDll/src/ncodehook/: NCodeHook.cpp  NCodeHook.h  NCodeHookInstantiation.h  NCodeHookItem.cpp  NCodeHookItem.h
distorm/: PKG-INFO
ncodehook/: NCodeHook.cpp
ninjectlib/: IATModifier.cpp  IATModifier.h  Process.h
tests/haskell_pathrewrite/: b.txt  config.xml  make.cmd  read_a.hs
windows_hdrs/: cor.h
xsd/: make.sh  sysintercept_config.xsd
